# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# targets might be used in various places also outside of the repo, so make it public
package(default_visibility = ["//visibility:public"])

#################################################################

py_library(
    name = "pylib_util",
    srcs = [
        "util.py",
    ],
    deps = [
        requirement("click"),
        requirement("debugpy"),
        requirement("numpy"),
    ],
)

#################################################################

py_binary(
    name = "ncore_export_ply",
    srcs = ["ncore_export_ply.py"],
    deps = [
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/common:pylib_util",
        "//ncore/impl/data:pylib_util",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        requirement("click"),
        requirement("numpy"),
        requirement("point_cloud_utils"),
        requirement("tqdm"),
    ],
)

#################################################################

py_binary(
    name = "ncore_export_camera",
    srcs = ["ncore_export_camera.py"],
    deps = [
        "//ncore/impl/data:pylib_util",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        requirement("click"),
        requirement("numpy"),
        requirement("opencv_python_headless"),
        requirement("tqdm"),
    ],
)

#################################################################

py_library(
    name = "pylib_visualization",
    srcs = [
        "visualization.py",
    ],
    deps = [
        "//ncore/impl/data:pylib_types",
        requirement("matplotlib"),
        requirement("multimethod"),
        requirement("numpy"),
        requirement("open3d"),
        requirement("scipy"),
        requirement("tensorflow"),  # required by open3d.ml.tf
    ],
)

#################################################################

py_binary(
    name = "ncore_visualize_labels",
    srcs = ["ncore_visualize_labels.py"],
    deps = [
        ":pylib_visualization",
        "//ncore/impl/data:pylib_types",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        "//ncore/impl/data/v4:pylib_types",
        "//scripts:pylib_util",
        requirement("click"),
        requirement("pandas"),
        requirement("tqdm"),
    ],
)

#################################################################

py_binary(
    name = "ncore_project_pc_to_img",
    srcs = ["ncore_project_pc_to_img.py"],
    deps = [
        ":pylib_visualization",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/data:pylib_types",
        "//ncore/impl/data:pylib_util",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/sensors:pylib_camera",
        "//ncore/impl/sensors:pylib_lidar",
        "//scripts:pylib_util",
        requirement("click"),
        requirement("numpy"),
        requirement("pyside6"),  # required to open Qt6 windows
        requirement("scipy"),
        requirement("tqdm"),
    ],
)

#################################################################

py_binary(
    name = "ncore_export_colored_pc",
    srcs = ["ncore_export_colored_pc.py"],
    deps = [
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/data:pylib_types",
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        "//ncore/impl/sensors:pylib_camera",
        requirement("click"),
        requirement("numpy"),
        requirement("point_cloud_utils"),
        requirement("tqdm"),
    ],
)

#################################################################

py_binary(
    name = "ncore_sequence_meta",
    srcs = ["ncore_sequence_meta.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//ncore/impl/data/v4:pylib_compat",
        "//ncore/impl/data/v4:pylib_components",
        requirement("click"),
    ],
)
