load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "lib",
    srcs = [
        "common.py",
        "transformations.py",
        "visualization.py",
        "waymo_utils.py",
        "nvidia_utils.py"
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("numpy"),
        requirement("pillow"),
        requirement("scipy"),
        "//protos:deepmap_py_proto"
    ],
)

# REMOVE ME - testing only
py_binary(
    name = "testbinary",
    srcs = ["testbinary.py"],
    deps = [
        ":lib",
    ],
)
