# Copyright (c) 2025 NVIDIA CORPORATION.  All rights reserved.

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "ruff-isort",
    srcs = [
        "ruff_isort.sh",
    ],
    data = [
        "@multitool//tools/ruff",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

format_multirun(
    name = "format",
    # Currently `ruff format` does not support sort import so this is a workaround
    # of `python = "@multitool//tools/ruff"`.
    # See more at https://docs.astral.sh/ruff/formatter/#sorting-imports.
    python = ":ruff-isort",
    starlark = "@buildifier_prebuilt//:buildifier",
    starlark_check_args = [
        "--mode=diff",
        "--lint=warn",
    ],
    starlark_fix_args = [
        "--lint=fix",
    ],
    visibility = [
        # Add visibility for //:format
        "//:__pkg__",
    ],
)
