# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "sphinx_wrapper",
    srcs = ["sphinx_wrapper.py"],
    visibility = ["//docs:__subpackages__"],
    deps = [
        requirement("sphinx"),
        requirement("sphinx_rtd_theme"),
        requirement("nbsphinx"),
        requirement("pexpect"),
        requirement("ipython"),
        "@ncore_repo//ncore/data:pylib",
        "@ncore_repo//ncore/data/v3:pylib",
        "@ncore_repo//ncore/geometry:pylib",
        "@ncore_repo//ncore/sensors:pylib",
    ],
)

bzlformat_pkg(name = "bzlformat")
