# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "sphinx_wrapper",
    srcs = ["sphinx_wrapper.py"],
    visibility = ["//docs:__subpackages__"],
    deps = [
        requirement("ipython"),
        requirement("nbsphinx"),
        requirement("pexpect"),
        requirement("sphinx"),
        requirement("sphinx_rtd_theme"),
        "@ncore_repo//ncore/data:pylib",
        "@ncore_repo//ncore/data/v4:pylib",
        "@ncore_repo//ncore/sensors:pylib",
    ],
)
