# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_mypy//mypy:mypy.bzl", "mypy_cli")

exports_files([
    "mypy.ini",
])

mypy_cli(
    name = "mypy",
    mypy_requirement = requirement("mypy"),
    python_version = "3.11",
    tags = ["no-mypy"],
    deps = [
        # List of dependencies that provide type-hints
        requirement("click"),
        requirement("pytest"),
        requirement("numpy"),
        requirement("sphinx"),
        requirement("multimethod"),
        requirement("jupyter_server"),
        requirement("dataclasses_json"),
        requirement("torch"),
    ],
)

bzlformat_pkg(name = "bzlformat")
