# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_mypy//mypy:mypy.bzl", "mypy_cli")

exports_files([
    "mypy.ini",
])

mypy_cli(
    name = "mypy",
    mypy_requirement = requirement("mypy"),
    python_version = "3.11",
    tags = ["no-mypy"],
)
