# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_python//python:defs.bzl", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "pylib",
    srcs = [
        "__init__.py",
    ],
    data = ["py.typed"],
    deps = [
        "//dsai_internal/data:pylib_types",
        "//dsai_internal/data:pylib_util",
    ],
)

pytest_test(
    name = "test",
    srcs = ["test.py"],
    deps = [
        ":pylib",
    ],
)

bzlformat_pkg(name = "bzlformat")
