# Copyright (c) 2024 NVIDIA CORPORATION.  All rights reserved.

load("@rules_python//python:defs.bzl", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "pylib",
    srcs = [
        "__init__.py",
    ],
    deps = [
        "//ncore/impl/data_converter:pylib_base",
    ],
)

pytest_test(
    name = "test",
    srcs = ["test.py"],
    deps = [
        ":pylib",
    ],
)
