# Copyright (c) 2024 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "pylib_data_converter",
    srcs = [
        "__init__.py",
    ],
    # make sure mypy knows this is a typed package
    data = [":py.typed"],
    # used in various places also outside of the repo, so make it public
    visibility = ["//visibility:public"],
    deps = [
        requirement("click"),
        "//scripts:pylib_util",
    ],
)
