# Copyright (c) 2023 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "ncore_rgb_ray_mesh_intersection",
    srcs = ["ncore_rgb_ray_mesh_intersection.py"],
    deps = [
        requirement("click"),
        requirement("point-cloud-utils"),
        requirement("numpy"),
        requirement("tqdm"),
        requirement("torch"),
        requirement("scipy"),
        requirement("pillow"),
        "//ncore/impl/data:pylib_data3",
        "//ncore/impl/sensors:pylib_camera",
    ],
)

#################################################################

py_binary(
    name = "ncore_surface_rec",
    srcs = ["ncore_surface_rec.py"],
    deps = [
        requirement("click"),
        requirement("tqdm"),
        requirement("point-cloud-utils"),
        "//3rdparty/poisson_recon:pylib",
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/data:pylib_data3",
        "//scripts:pylib_util",
    ],
)

#################################################################

py_binary(
    name = "ncore_to_map_transform",
    srcs = ["ncore_to_map_transform.py"],
    deps = [
        requirement("click"),
        requirement("numpy"),
        "//ncore/impl/common:pylib_transformations",
        "//ncore/impl/data:pylib_data3",
    ],
)

