# Copyright (c) 2023 NVIDIA CORPORATION.  All rights reserved.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "ncore_rgb_ray_mesh_intersection",
    srcs = ["ncore_rgb_ray_mesh_intersection.py"],
    deps = [
        requirement("click"),
        requirement("point-cloud-utils"),
        requirement("numpy"),
        requirement("tqdm"),
        requirement("torch"),
        requirement("scipy"),
        requirement("pillow"),
        "//ncore/impl/data:pylib_data",
        "//ncore/impl/sensors:pylib_camera",
    ],
)
