# Copyright (c) 2023 NVIDIA CORPORATION.  All rights reserved.

load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

py_package(
    name = "dsai_pkg",
    packages = ["src.dsai"],
    deps = ["@dsai-repo//src/dsai/data:pylib",
            "@dsai-repo//src/dsai/data/v3:pylib"],
)

py_wheel(
    name = "dsai_wheel",
    distribution = "dsai",
    python_requires = ">=3.10",
    python_tag = "cp310",
    version = "0.3.0",
    deps = [
        ":dsai_pkg",
    ],
    strip_path_prefixes=["src"],
    requires =[
        "numpy",
        "dataclasses_json",
        "pillow",
        "zarr",
        "cbor2",
        "scipy"
    ]
)
