# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//:code_package_group"])

py_library(
    name = "pylib_data_converter",
    srcs = [
        "data_converter.py",
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_library(
    name = "pylib_nvidia_maglev",
    srcs = [
        "nvidia_maglev3.py",
    ],
    deps = [
        ":pylib_data_converter",
        "//dsai/impl/data:pylib_data",
        "//dsai/impl/data:pylib_types",
        requirement("point-cloud-utils"),
        "//dsai/impl/common:pylib_common",
        "//dsai/impl/common:pylib_nvidia",
    ],
)

py_library(
    name = "pylib_nvidia_deepmap",
    srcs = [
        "nvidia_deepmap3.py",
    ],
    deps = [
        ":pylib_data_converter",
        "//dsai/impl/data:pylib_data",
        "//dsai/impl/data:pylib_types",
        requirement("protobuf3-to-dict"),
        requirement("opencv-python"),
        "//dsai/impl/common:pylib_common",
        "//dsai/impl/common:pylib_nvidia",
        "//dsai/impl/data_converter/protos/deepmap:pylib_util",
    ],
)

bzlformat_pkg(name = "bzlformat")
